# x-algorithm-oss

./: .gitignore  Cargo.toml  README-x-algorithm.md  README.md
candidate-pipeline/: Cargo.toml  candidate_pipeline.rs  filter.rs  hydrator.rs  query_hydrator.rs  scorer.rs  side_effect.rs  source.rs  util.rs
home-mixer/: Cargo.toml  clients.rs  main.rs  params.rs  server.rs  util.rs
home-mixer/candidate_hydrators/: core_data_candidate_hydrator.rs  subscription_hydrator.rs  video_duration_candidate_hydrator.rs
home-mixer/candidate_pipeline/: phoenix_candidate_pipeline.rs
home-mixer/clients/: gizmoduck_client.rs  phoenix_prediction_client.rs  phoenix_retrieval_client.rs  s2s.rs  socialgraph_client.rs  strato_client.rs  thunder_client.rs  tweet_entity_service_client.rs  uas_fetcher.rs
home-mixer/filters/: retweet_deduplication_filter.rs  self_tweet_filter.rs
home-mixer/query_hydrators/: user_action_seq_query_hydrator.rs
home-mixer/scorers/: phoenix_scorer.rs  weighted_scorer.rs
home-mixer/sources/: thunder_source.rs
home-mixer/util/: bloom_filter.rs  candidates_util.rs  score_normalizer.rs  snowflake.rs
proto/: Cargo.toml  build.rs
proto/src/: home_mixer.proto  lib.rs
recsys-proto/: Cargo.toml  lib.rs
thunder/: Cargo.toml  args.rs  config.rs  lib.rs  main.rs  metrics.rs  o2.rs  schema.rs  strato_client.rs  thunder_service.rs
thunder-proto/: Cargo.toml  build.rs
thunder-proto/src/: lib.rs  thunder.proto
thunder/posts/: post_store.rs
twitter-context-proto/: Cargo.toml  lib.rs
visibility-filtering/: Cargo.toml  lib.rs
xai-post-text/: Cargo.toml
xai-post-text/src/: lib.rs
xai-recsys-aggregation/: Cargo.toml
xai-recsys-aggregation/src/: lib.rs
xai-stats-macro/: Cargo.toml
xai-stats-macro/src/: lib.rs
xai-strato/: Cargo.toml
xai-strato/src/: lib.rs
xai-uas-thrift/: Cargo.toml
xai-uas-thrift/src/: lib.rs
y/: buf.gen.yaml  package.json  test_client.ts
y/app/: layout.tsx  page.tsx
y/app/explore/: page.tsx
y/app/messages/: page.tsx
y/app/notifications/: page.tsx
y/app/profile/: page.tsx
y/components/: feed.tsx  right-sidebar.tsx  sidebar.tsx  tweet-card.tsx
