[workspace]
members = [
    "candidate-pipeline",
    "home-mixer",
    "thunder",
    "proto",
    "visibility-filtering",
    "twitter-context-proto",
    "recsys-proto",
    "thunder-proto",
    "xai-stats-macro",
    "xai-post-text",
    "xai-strato",
    "xai-recsys-aggregation",
    "xai-uas-thrift"
]
resolver = "2"
