[package]
name = "xai-thunder"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[[bin]]
name = "thunder"
path = "main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0"
rdkafka = { version = "0.36", features = ["cmake-build"] }
xai-thunder-proto = { path = "../thunder-proto" }
tonic = "0.10"
prost = "0.12"
lazy_static = "1.4"
dashmap = "5.5"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
